k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-management-microservice
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: monitoring-management-microservice
  template:
    metadata:
      labels:
        app: monitoring-management-microservice
    spec:
      containers:
        - name: monitoring-management-microservice
          image: monitoring-management-microservice:latest
          command: ["python"]
          args: ["main.py"]
          ports:
            - containerPort: 8000
          imagePullPolicy: Never
          # livenessProbe:
          #   httpGet:
          #     port: 8000
          #     path: /
          #   initialDelaySeconds: 300
          #   periodSeconds: 5
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     port: 8000
          #     path: /
          #   initialDelaySeconds: 300
          #   periodSeconds: 5
          #   failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recording-microservice
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: recording-microservice
  resources:
  template:
    metadata:
      labels:
        app: recording-microservice
    spec:
      containers:
        - name: recording-microservice
          image: recording-microservice:latest
          command: ["python"]
          args: ["main.py"]
          ports:
            - containerPort: 8001
          imagePullPolicy: Never
          # livenessProbe:
          #   httpGet:
          #     port: 8001
          #     path: /
          #   initialDelaySeconds: 120
          #   periodSeconds: 5
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     port: 8001
          #     path: /
          #   initialDelaySeconds: 60
          #   periodSeconds: 5
          #   failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-microservice
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: analytics-microservice
  template:
    metadata:
      labels:
        app: analytics-microservice
    spec:
      containers:
        - name: analytics-microservice
          image: analytics-microservice:latest
          command: ["python"]
          args: ["main.py"]
          ports:
            - containerPort: 8002
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   httpGet:
          #     port: 8002
          #     path: /
          #   initialDelaySeconds: 120
          #   periodSeconds: 5
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     port: 8002
          #     path: /
          #   initialDelaySeconds: 60
          #   periodSeconds: 5
          #   failureThreshold: 5
