k8s/kakfa.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
  selector:
    app: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  type: NodePort
  ports:
    - port: 2181
      name: zookeeper
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper
          ports:
            - containerPort: 2181
          imagePullPolicy: IfNotPresent
      volumes:
        - name: zookeeper-data
          hostPath:
            path: /data/zookeeper
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: "kafka"
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: plaintext
      volumes:
        - name: kafka-data
          hostPath:
            path: /data/kafka
            type: DirectoryOrCreate
